tests/baselines/reference/stringLiteralTypesForBindingPatternVariables06.errors.txt
tests/cases/conformance/types/stringLiteral/stringLiteralTypesForBindingPatternVariables06.ts(5,19): error TS2322: Type '"kindC"' is not assignable to type '"kindA" | "kindB"'.
  Type '"kindC"' is not assignable to type '"kindB"'.
tests/cases/conformance/types/stringLiteral/stringLiteralTypesForBindingPatternVariables06.ts(6,18): error TS2322: Type '"kindA" | "kindB"' is not assignable to type '"kindA"'.
  Type '"kindB"' is not assignable to type '"kindA"'.
tests/cases/conformance/types/stringLiteral/stringLiteralTypesForBindingPatternVariables06.ts(7,18): error TS2322: Type '"kindA" | "kindB"' is not assignable to type '"kindC"'.
  Type '"kindA"' is not assignable to type '"kindC"'.
tests/cases/conformance/types/stringLiteral/stringLiteralTypesForBindingPatternVariables06.ts(11,18): error TS2322: Type '"kindC"' is not assignable to type '"kindA" | "kindB"'.
  Type '"kindC"' is not assignable to type '"kindB"'.
tests/cases/conformance/types/stringLiteral/stringLiteralTypesForBindingPatternVariables06.ts(12,18): error TS2322: Type '"kindC"' is not assignable to type '"kindA" | "kindB"'.
  Type '"kindC"' is not assignable to type '"kindB"'.
tests/cases/conformance/types/stringLiteral/stringLiteralTypesForBindingPatternVariables06.ts(17,5): error TS2322: Type '"kindC"' is not assignable to type '"kindA" | "kindB"'.
  Type '"kindC"' is not assignable to type '"kindB"'.
tests/cases/conformance/types/stringLiteral/stringLiteralTypesForBindingPatternVariables06.ts(20,5): error TS2322: Type '"kindC"' is not assignable to type '"kindA" | "kindB"'.
  Type '"kindC"' is not assignable to type '"kindB"'.


==== tests/cases/conformance/types/stringLiteral/stringLiteralTypesForBindingPatternVariables06.ts (7 errors) ====
    
    var kindAndVal: ["kindA" | "kindB", any];
    
    namespace Consts {
        export const [kind = "kindC", val] = kindAndVal;
                      ~~~~
!!! error TS2322: Type '"kindC"' is not assignable to type '"kindA" | "kindB"'.
!!! error TS2322:   Type '"kindC"' is not assignable to type '"kindB"'.
        export const a: "kindA" = kind;
                     ~
!!! error TS2322: Type '"kindA" | "kindB"' is not assignable to type '"kindA"'.
!!! error TS2322:   Type '"kindB"' is not assignable to type '"kindA"'.
        export const b: "kindC" = kind;
                     ~
!!! error TS2322: Type '"kindA" | "kindB"' is not assignable to type '"kindC"'.
!!! error TS2322:   Type '"kindA"' is not assignable to type '"kindC"'.
    }
    
    namespace Lets {
        export let [ kind1 = "kindC", val ] = kindAndVal;
                     ~~~~~
!!! error TS2322: Type '"kindC"' is not assignable to type '"kindA" | "kindB"'.
!!! error TS2322:   Type '"kindC"' is not assignable to type '"kindB"'.
        export let [ kind2 = "kindC" ] = kindAndVal;
                     ~~~~~
!!! error TS2322: Type '"kindC"' is not assignable to type '"kindA" | "kindB"'.
!!! error TS2322:   Type '"kindC"' is not assignable to type '"kindB"'.
        kind1 = kind2;
        kind2 = kind1;
    
        kind1 = "kindA";
        kind1 = "kindC";
        ~~~~~
!!! error TS2322: Type '"kindC"' is not assignable to type '"kindA" | "kindB"'.
!!! error TS2322:   Type '"kindC"' is not assignable to type '"kindB"'.
    
        kind2 = "kindA";
        kind2 = "kindC";
        ~~~~~
!!! error TS2322: Type '"kindC"' is not assignable to type '"kindA" | "kindB"'.
!!! error TS2322:   Type '"kindC"' is not assignable to type '"kindB"'.
    } 